headlamp-stack/manifests/oauth2-forwardauth.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: headlamp-proxy-auth
  namespace: oauth2-proxy
spec:
  forwardAuth:
    address: http://oauth2-proxy.oauth2-proxy.svc.cluster.local:80/oauth2/auth
    trustForwardHeader: true
    authResponseHeaders:
      - X-Forwarded-User
      - X-Forwarded-Email
      - X-Forwarded-Group

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: headlamp-error-redir
  namespace: oauth2-proxy
spec:
  errors:
    status:
      - "401-403"
    query: "/oauth2/sign_in?rd={url}"
    service:
      name: oauth2-proxy
      port: 80

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: auth-headers
  namespace: oauth2-proxy
spec:
  headers:
    sslRedirect: false
    stsSeconds: 315360000
    browserXssFilter: true
    contentTypeNosniff: true
    forceSTSHeader: true
    sslHost: headlamp.tail3aac60.ts.net
    stsIncludeSubdomains: true
    stsPreload: true
    frameDeny: true

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: oauth2-proxy-auth-headers@kubernetescrd
  name: headlamp-oauth2
  namespace: oauth2-proxy
spec:
  ingressClassName: traefik
  rules:
    - host: headlamp.tail3aac60.ts.net
      http:
        paths:
          - backend:
              service:
                name: oauth2-proxy
                port:
                  number: 80
            path: /oauth2/
            pathType: Prefix
